Changed loading text to red

--- a/Fret1/Fret1/wwwroot/index.html
+++ b/Fret1/Fret1/wwwroot/index.html
@@ -28,7 +28,7 @@
     <main>
         <article class="row">A guitar chord and scale finder that display both scales and chords overlapped on the fretboard.</article>
 
-        <app class="row">Looking for my guitar...</app>
+        <app class="row text-danger">Looking for my guitar...</app>
 
         <article class="row">
             <p>Choose the scale and chord key. Then choose the scale or chord type.</p>
